--- a/css/main.css
+++ b/css/main.css
@@ -172,15 +172,33 @@ h2::after{
     width: 100px;
     display: block;
 }
-
-
-
-
-
+h3{
+    font-size: 1.6em;
+    color: #FE4918;
+    font-family: 'PT Sans', sans-serif;
+    margin: 0;
+}
+.button {
+    background-color: #FE4918;
+    padding: 10px 40px;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    margin-top: 20px;
+    display: inline-block;
+    transition: all 0.3s ease;
+}
+.button:hover{
+    background-color: #e33000;
+}
+.float-right{
+    float: right;
+}
 /* Header */
 div.hero {
   background-image: url(../img/encabezado.jpg);
-  height: 100vh;
+  height: 60vh;
   background-position: top center;
   background-size: cover;
 }
@@ -251,7 +269,7 @@ h1.nombre-sitio {
 }
 @media only screen and (min-width:768px){
     h1.nombre-sitio {
-        font-size: 9.5vw;
+        font-size: 7.5vw;
         margin:0;
         line-height: 1;
     } 
@@ -365,15 +383,85 @@ html {
   font-size: 62.5%;
 } */
 
+/* Sección de video */
+section.programa{
+    position: relative;
+}
+div.contenedor-video{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+div.contenido-programa{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+div.programa-evento{
+    background-color: rgba(255, 255, 255, .8);
+    padding: 15px;
+    margin-top:80px;
+}
+@media only screen and (min-width:768px){
+    div.programa-evento{
+        width:70%;
+    }
+}
+@media only screen and (min-width:992px){
+    div.programa-evento{
+        width:50%;
+    }
+}
+/* Tab Nav */
 
+nav.menu-programa{
+    width:100%;
+    border-bottom: 1px solid #FE4918;
+    padding-bottom: 10px;
+}
 
+@media only screen and (min-width:768px){
+    nav.menu-programa{
+        display: table;
+    }
+}
 
+nav.menu-programa a{
+    display: block;
+    text-align: center;
+    color: #000;
+    text-decoration: none;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
 
+@media only screen and (min-width:768px){
+    nav.menu-programa a{
+        display: table-cell;
+    }
+}
 
+nav.menu-programa a i, div.detalle-evento p i{
+    color: #FE4918;
+    font-size: 1.1em;
+    margin-right: 10px;
+}
 
-
-
-
+/* Detalle del evento */
+div.detalle-evento{
+    margin-top: 20px;
+    border-bottom:1px solid #000;
+    padding: 0 20px;
+}
+div.detalle-evento:nth-child(2){
+    border: none;
+}
+div.detalle-evento p{
+    margin-bottom: 20px;
+    font-size: 20px;
+}
 
 
 
