--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,11 @@ h3{
 .float-right{
     float: right;
 }
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 /* Header */
 div.hero {
   background-image: url(../img/encabezado.jpg);
@@ -463,7 +468,58 @@ div.detalle-evento p{
     font-size: 20px;
 }
 
+/* Invitados */
+ul.lista-invitados li{
+    padding: 10px;
+    float: left;
+}
+@media only screen and (min-width:480px){
+    ul.lista-invitados li{
+        width: 50%;
+    }
+}
 
+@media only screen and (min-width:768px){
+    ul.lista-invitados li{
+        width: 33.3%;
+    }
+}
+
+div.invitado{
+    position: relative;
+    overflow: hidden;
+
+}
+div.invitado img{
+    max-width: 100%;
+    filter: grey;
+    -webkit-filter: grayscale(1);
+    -webkit-transition: all 0.5s ease-in-out;
+}
+
+div.invitado img:hover{
+    -webkit-filter: grayscale(0);
+    -webkit-transform: scale(1.1);
+    /* transform: rotate(1deg); */
+}
+div.invitado p{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 15px 10px;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.55);
+    width: 100%;
+    color:#FE4918;
+    text-transform: uppercase;
+    text-align: left;
+    font-family: 'Oswald', sans-serif;
+    -webkit-transition: all 0.5s ease-in-out;
+}
+div.invitado:hover p{
+    bottom: -80px;
+    opacity: 0;
+}
 
 
 /* ==========================================================================
