--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ body {
         max-width: 1100px;
     }
 }
+
 .seccion{
     padding: 30px 0;
 }
@@ -521,6 +522,52 @@ div.invitado:hover p{
     opacity: 0;
 }
 
+/* Contador */
+.parallax::before{
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+div.contador{
+    position: relative;
+    height: auto;
+}
+div.contador::before{
+    background-image: url(../img/bg-resumen.jpg);
+    content: '';
+}
+ul.resumen-evento{
+    position: relative;
+    padding: 120px 0;
+}
+ul.resumen-evento li{
+    width: 50%;
+    float: left;
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-size: 24px;
+}
+@media only screen and (min-width:768px){
+    ul.resumen-evento li{
+        width:25%;
+    }
+}
+
+p.numero{
+    color: #FE4918;
+    font-size: 4em;
+    display: block;
+    margin:  0 0 10px 0;
+
+}
 
 /* ==========================================================================
    Helper classes
