--- a/css/main.css
+++ b/css/main.css
@@ -533,6 +533,8 @@ div.invitado:hover p{
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    -webkit-filter: brightness(.8);
+    filter: brightness(.8);
 }
 div.contador{
     position: relative;
@@ -560,13 +562,46 @@ ul.resumen-evento li{
         width:25%;
     }
 }
-
 p.numero{
     color: #FE4918;
     font-size: 4em;
     display: block;
     margin:  0 0 10px 0;
+    font-family: 'Oswald', sans-serif;
+}
 
+/* Tabla de precios */
+ul.lista-precios > li{
+    padding: 10px;
+}
+@media only screen and (min-width:768px){
+    ul.lista-precios > li{
+        float: left;
+        width: 33.3%;
+    }
+}
+div.tabla-precio{
+    border:1px solid #e1e1e1;
+    background-color: white;
+    padding: 40px 0;
+    text-align: center;
+}
+div.tabla-precio ul li{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 14px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    color: #868686;
+    line-height: 26px;
+}
+div.tabla-precio h3{
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+div.tabla-precio p.numero{
+    color: black;
+    margin-top: 20px 0;
 }
 
 /* ==========================================================================
