Checks de paquetes y diferencia cual paquete es mejor

--- a/css/main.css
+++ b/css/main.css
@@ -186,9 +186,16 @@ h3{
     text-decoration: none;
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
+    font-size: 1em;
     margin-top: 20px;
     display: inline-block;
     transition: all 0.3s ease;
+    border: 2px solid #FE4918;
+}
+.button.hollow,
+.button.hollow:hover{
+    background-color: white;
+    color: #FE4918;
 }
 .button:hover{
     background-color: #e33000;
@@ -585,6 +592,12 @@ div.tabla-precio{
     background-color: white;
     padding: 40px 0;
     text-align: center;
+    transition: all 0.3s ease;
+}
+div.tabla-precio:hover{
+    transform: scale(1.05);
+    border: 1px solid #FE4918;
+    box-shadow: 0px 0px 50px #666;
 }
 div.tabla-precio ul li{
     font-family: 'PT Sans', sans-serif;
@@ -593,6 +606,17 @@ div.tabla-precio ul li{
     text-transform: uppercase;
     color: #868686;
     line-height: 26px;
+}
+div.tabla-precio ul li::before{
+    content: "\f00c"; 
+    font-family: FontAwesome;
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 5px;
+    font-size: 20px;
+    color: green;
+    -webkit-font-smoothing: antialiased;
+
 }
 div.tabla-precio h3{
     font-family: 'Oswald', sans-serif;
