--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,13 @@ h3{
     background-color: white;
     color: #FE4918;
 }
+.button.transparente{
+    background-color: transparent;
+    border:2px solid white;
+}
+.button.transparente:hover{
+    border:2px solid #FE4918;
+}
 .button:hover{
     background-color: #e33000;
 }
@@ -696,6 +703,32 @@ footer.info-testimonial cite span{
     display: block;
     text-transform: none;
     margin-top: 5px;
+}
+
+/* Newsletter */
+div.newsletter{
+    position: relative;
+    height: auto;
+}
+div.newsletter::before{
+    background-image: url(../img/bg-newsletter.jpg);
+    content: '';
+}
+div.newsletter .contenido{
+    padding:100px 0;
+    color: white;
+    text-align: center;
+    position: relative;
+}
+div.newsletter .contenido p{
+    font-size: 1.2em;
+    text-transform: lowercase;
+}
+div.newsletter .contenido h3{
+    color: white;
+    text-transform: uppercase;
+    font-size: 7vw;
+    font-family: 'PT Sans', sans-serif;
 }
 /* ==========================================================================
    Helper classes
