--- a/css/main.css
+++ b/css/main.css
@@ -786,6 +786,103 @@ p.copyright {
   margin: 20px 0 0 0;
   text-align: center;
 }
+
+/* INTERNAS */
+/* Registro */
+form.registro h3{
+  text-align: center;
+  text-transform: uppercase;
+  margin: 20px 0 0 0;
+}
+form.registro label{
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+h4{
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 2px solid #fe4918;
+    font-size: 1.2em;
+}
+div.caja{
+    background-color: white;
+    border: 1px solid #e1e1e1;
+    padding: 10px;
+    margin: 10px;
+}
+div.campo{
+    padding: 20px;
+}
+@media only screen and (min-width:768px){
+    div.campo{
+        float:left;
+        width: 33.3%;
+    }
+}
+div.paquetes .tabla-precio:hover{
+    transform: none;
+    box-shadow: none;
+}
+div.paquetes .tabla-precio input{
+    clear: both;
+    width: 100px;
+    margin: 10px auto;
+    display: block;
+}
+
+.contenido-dia{
+    padding: 20px;
+    /* display: none; */
+}
+@media only screen and (min-width:768px){ 
+    .contenido-dia > div{
+        float:left;
+        width: 33.3%;
+    }
+}
+
+.contenido-dia > div p{
+    text-align: left;
+}
+.contenido-dia > div label{
+    display: block;
+    margin-bottom: 10px;
+}
+.contenido-dia > div input{
+    margin-right: 10px;
+}
+.contenido-dia > div label time{
+    color: #fe4918;
+    font-weight: bold;
+}
+
+/* Resumen registro */
+.resumen p{
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+div.resumen .extras{
+    float: left;
+    width: 50%;
+    padding: 30px;
+}
+div.extras div.orden{
+    text-align: left;
+    margin-bottom: 10px;
+}
+div.extras div.orden input{
+    margin: 10px 0 0 0;
+}
+div.resumen div.total{
+    float: right;
+    width: 50%;
+    padding: 30px;
+}
+div.resumen input{
+    display: block;
+    margin: 10px auto;
+
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
