FinMapa ej Leaflet

--- a/css/main.css
+++ b/css/main.css
@@ -729,7 +729,7 @@ div.tabla-precio p.numero {
 
 div.mapa {
     height: 420px;
-    background-color: green;
+    /* background-color: green; */
 }
 
 
